Diet Calculator implemented

--- a/src/app/pages/calories-calculator/calories-calculator.page.html
+++ b/src/app/pages/calories-calculator/calories-calculator.page.html
@@ -18,16 +18,16 @@
           <ion-segment-button value="exercise">
             <ion-label>Exercise Calculator</ion-label>
           </ion-segment-button>
-          <!-- <ion-segment-button value="group">
-            <ion-label>Groups</ion-label>
-          </ion-segment-button> -->
+          <ion-segment-button value="diet">
+            <ion-label>Diet</ion-label>
+          </ion-segment-button>
         </ion-segment>
 
         <calorie-target [hidden]="selectedSegment !=='target'"></calorie-target>
         <exercise-calculator
           [hidden]="selectedSegment !=='exercise'"
         ></exercise-calculator>
-        <!-- <usersearch [hidden]="selectedSegment !=='user'"></usersearch> -->
+        <diet-calculator [hidden]="selectedSegment !=='diet'"></diet-calculator>
       </div>
     </ion-content>
   </div>
