--- a/src/app/pages/calories-calculator/calories-calculator.page.html
+++ b/src/app/pages/calories-calculator/calories-calculator.page.html
@@ -11,6 +11,12 @@
   <div class="outer-container">
     <ion-content>
       <div class="inner-container">
+        <ion-card class="summary ion-text-center">
+          <h2>Calories Summary</h2>
+          <h3>You Require X calories per day.</h3>
+          <h3>You consume X calories per day.</h3>
+          <h3>Your workout burns X calories.</h3>
+        </ion-card>
         <ion-segment value="target" (ionChange)="onSegmentChange($event)">
           <ion-segment-button value="target">
           <ion-label>Calorie Target</ion-label>
