--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -19,14 +19,14 @@
                 <!-- <option value="" disabled selected>Select an exercise</option> -->
                 <!-- <option *ngFor="let option of exerciseOptions" [value]="option">{{ option }}</option> -->
                 <option value="" hidden selected>Select an exercise</option>
-                <option value="stretches">Stretches</option>
-                <option value="pushUps">Push-Ups</option>
-                <option value="sitUps">Sit-Ups</option>
-                <option value="jumpingJacks">Jumping Jacks</option>
-                <option value="lunges">Lunges</option>
-                <option value="planks">Planks</option>
-                <option value="burpees">Burpees</option>
-                <option value="crunches">Crunches</option>
+                <option value="Stretches">Stretches</option>
+                <option value="Push-Ups">Push-Ups</option>
+                <option value="Sit-Ups">Sit-Ups</option>
+                <option value="Jumping Jacks">Jumping Jacks</option>
+                <option value="Lunges">Lunges</option>
+                <option value="Planks">Planks</option>
+                <option value="Burpees">Burpees</option>
+                <option value="Crunches">Crunches</option>
                 <!-- <option value="pushUps">Push-Ups</option> -->
               </select>
               <input formControlName="sets" placeholder="Sets" />
@@ -53,5 +53,6 @@
     <ion-button class="submit" type="button" (click)="calculateTotalCaloriesBurned()">
       Calculate Calories Burned
     </ion-button>
+    <pre><h3>{{ message }}</h3></pre>
   </ion-card-content>
 </ion-card>
