--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -6,7 +6,7 @@
 
   <ion-content [scrollEvents]="true" *ngIf="isLoading; else loaderContent">
 
-      <ng-container *ngIf="GOALS.length > 0; else ngemptyTemp">
+      <ng-container *ngIf="getFilteredGoals().length > 0; else ngemptyTemp ">
 
 
         <ion-card *ngFor="let goal of getFilteredGoals()">
@@ -40,17 +40,28 @@
       </ng-container>
 
       <ng-template #ngemptyTemp>
-        <ion-card>
+
+        <ion-card *ngIf="isSelected('0')">
             <ion-card-content>
                 <ion-card-title>
-<<<<<<< Updated upstream
-                    <ion-text color="danger">No Goals yet</ion-text>
-=======
-                    <ion-text color="danger">No Goals Yet</ion-text>
->>>>>>> Stashed changes
+                    <ion-text color="danger">No Active goals</ion-text>
                 </ion-card-title>
             </ion-card-content>
         </ion-card>
+          <ion-card *ngIf="isSelected('1')">
+              <ion-card-content>
+                  <ion-card-title>
+                      <ion-text color="danger">No Completed goals yet</ion-text>
+                  </ion-card-title>
+              </ion-card-content>
+          </ion-card>
+          <ion-card *ngIf="isSelected('2')">
+              <ion-card-content>
+                  <ion-card-title>
+                      <ion-text color="danger">No Overdue goals yet</ion-text>
+                  </ion-card-title>
+              </ion-card-content>
+          </ion-card>
         </ng-template>
   </ion-content>
 
