--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -41,27 +41,32 @@
 
       <ng-template #ngemptyTemp>
 
-        <ion-card *ngIf="isSelected('0')">
-            <ion-card-content>
-                <ion-card-title>
-                    <ion-text color="danger">No Active goals</ion-text>
-                </ion-card-title>
-            </ion-card-content>
+        <ion-card *ngIf="isSelected('0')" class="zero-content-container">
+            <div class="inner-zero-content-wrapper">
+                <ion-icon class="large-icon" name="walk-sharp"></ion-icon><br>
+                <ion-text>
+                    No Active goals
+                </ion-text>
+            </div>
         </ion-card>
-          <ion-card *ngIf="isSelected('1')">
-              <ion-card-content>
-                  <ion-card-title>
-                      <ion-text color="danger">No Completed goals yet</ion-text>
-                  </ion-card-title>
-              </ion-card-content>
+          <ion-card *ngIf="isSelected('1')" class="zero-content-container">
+              <div class="inner-zero-content-wrapper">
+                  <ion-icon class="large-icon" name="checkmark-circle-sharp"></ion-icon><br>
+                  <ion-text>
+                      No Completed goals
+                  </ion-text>
+              </div>
           </ion-card>
-          <ion-card *ngIf="isSelected('2')">
-              <ion-card-content>
-                  <ion-card-title>
-                      <ion-text color="danger">No Overdue goals yet</ion-text>
-                  </ion-card-title>
-              </ion-card-content>
+          <ion-card *ngIf="isSelected('2')" class="zero-content-container">
+              <div class="inner-zero-content-wrapper">
+                  <ion-icon class="large-icon" name="time"></ion-icon><br>
+                  <ion-text>
+                      No Overdue goals
+                  </ion-text>
+              </div>
           </ion-card>
+
+
         </ng-template>
   </ion-content>
 
