Workout tracking prep

--- a/src/app/pages/calories-calculator/calories-calculator.page.html
+++ b/src/app/pages/calories-calculator/calories-calculator.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item lines="none">
+    <ion-buttons slot="start">
       <backbutton class="larger-back-button"></backbutton>
-      <ion-title>Calorie Calculator</ion-title>
-    </ion-item>
+    </ion-buttons>
+    <ion-title>Calorie Calculator</ion-title>
   </ion-toolbar>
 </ion-header>
 
