--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -11,7 +11,7 @@
     <ion-row>
       <ion-col>
        <div class="icon-container">
-        <ion-icon name="barbell-outline"></ion-icon>
+        <ion-icon src="/assets/dumbbell-small-svgrepo-com.svg"></ion-icon>
        </div>
       </ion-col>
     </ion-row>
