--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -1,7 +1,9 @@
 <ion-content [fullscreen]="true">
   <ion-header>
     <ion-toolbar>
-      <backbutton class="larger-back-button"></backbutton>
+      <ion-buttons slot="start">
+        <backbutton></backbutton>
+      </ion-buttons>
       <ion-title class="ion-text-center">Workout Tracking</ion-title>
     </ion-toolbar>
   </ion-header>
