--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -1,22 +1,13 @@
 <ion-card>
-  <ion-item-sliding>
-    <ion-item class="schedule-header" id="viewer" lines="none">
-      <ion-icon name="receipt-outline"></ion-icon>
-      <ion-text class="schedule-name">
-        {{schedule.name}}
-      </ion-text>
-      <ion-button slot="end" (click)="join()" *ngIf="inSession()" [disabled]="joined()">{{ joined() ? "Joined" : "Join" }}</ion-button>
-      <ion-icon name="chevron-down-outline" slot="end" (click)="viewSchedule()" *ngIf="!isSlideShow"></ion-icon>
-      <ion-icon name="chevron-up-outline" slot="end" (click)="viewSchedule()" *ngIf="isSlideShow"></ion-icon>
-    </ion-item>
-
-    <ion-item-options side="start" *ngIf="!isCompleted()">
-      <ion-item-option color="success" (click)="toggleEditSlide()">{{ isEditSlide ? "Cancel" : "Edit" }}</ion-item-option>
-    </ion-item-options>
-    <ion-item-options side="end">
-      <ion-item-option color="danger" (click)="presentActionSheet()">Delete</ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
+  <ion-item class="schedule-header" id="viewer" lines="none">
+    <ion-icon name="receipt-outline"></ion-icon>
+    <ion-text class="schedule-name">
+      {{schedule.name}}
+    </ion-text>
+    <ion-button slot="end" (click)="join()" *ngIf="inSession()" [disabled]="joined()">{{ joined() ? "Joined" : "Join" }}</ion-button>
+    <ion-icon name="chevron-down-outline" slot="end" (click)="viewSchedule()" *ngIf="!isSlideShow"></ion-icon>
+    <ion-icon name="chevron-up-outline" slot="end" (click)="viewSchedule()" *ngIf="isSlideShow"></ion-icon>
+  </ion-item>
 
   <div class="content" *ngIf="isSlideShow">
     <ion-card-content>
@@ -50,12 +41,33 @@
   <div class="info">
     <ion-item class="progress-label" lines="none">
       <ion-label>{{timeLeft()}}</ion-label>
-      <ion-icon name="checkmark-done-outline" slot="end" [ngClass]="{'active': joined(), 'inactive': !joined()}"></ion-icon>
-      <ion-buttons slot="end">
+      <!-- <ion-buttons slot="end">
+        <ion-button class="default-button" (click)="toggleEditSlide()">
+          <ion-icon [name]="isEditSlide ? 'close' : 'create'" color="success"></ion-icon>
+        </ion-button>
+        <ion-button class="default-button" (click)="presentActionSheet()">
+          <ion-icon name="trash" class="add-icon"></ion-icon>
+        </ion-button>
         <ion-button class="default-button" [id]="id">
           <ion-icon name="person-add" class="add-icon"></ion-icon>
         </ion-button>
-      </ion-buttons>
+      </ion-buttons> -->
+      <ion-fab horizontal="end" style="--background: transparent; box-shadow: none;">
+        <ion-fab-button class="default-button">
+          <ion-icon name="ellipsis-vertical"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-list side="start">
+          <ion-fab-button class="default-button" (click)="toggleEditSlide()">
+            <ion-icon [name]="isEditSlide ? 'close' : 'create'" color="success"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button class="default-button" (click)="presentActionSheet()">
+            <ion-icon name="trash" class="add-icon"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button class="default-button" [id]="id">
+            <ion-icon name="person-add" class="add-icon"></ion-icon>
+          </ion-fab-button>
+        </ion-fab-list>
+      </ion-fab>      
     </ion-item>
     <ion-progress-bar [value]="ratio"></ion-progress-bar>
   </div>
