--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -27,6 +27,23 @@
                 <option value="Planks">Planks</option>
                 <option value="Burpees">Burpees</option>
                 <option value="Crunches">Crunches</option>
+                <option value="Squats">Squats</option>
+                <option value="Deadlifts">Deadlifts</option>
+                <option value="Bench Presses">Bench Presses</option>
+                <option value="Pull-Ups">Pull-Ups</option>
+                <option value="Dumbbell Rows">Dumbbell Rows</option>
+                <option value="Leg Presses">Leg Presses</option>
+                <option value="Leg Curls">Leg Curls</option>
+                <option value="Bicep Curls">Bicep Curls</option>
+                <option value="Tricep Curls">Tricep Curls</option>
+                <option value="Barbell Rows">Barbell Rows</option>
+                <option value="Seated Cable Rows">Seated Cable Rows</option>
+                <option value="Barbell Curls">Barbell Curls</option>
+                <option value="Calf Raises">Calf Raises</option>
+                <option value="Crunches">Crunches</option>
+                <option value="Crunches">Crunches</option>
+                <option value="Crunches">Crunches</option>
+                <option value="Crunches">Crunches</option>
                 <!-- <option value="pushUps">Push-Ups</option> -->
               </select>
               <input formControlName="sets" placeholder="Sets" />
