--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -40,10 +40,10 @@
                 <option value="Seated Cable Rows">Seated Cable Rows</option>
                 <option value="Barbell Curls">Barbell Curls</option>
                 <option value="Calf Raises">Calf Raises</option>
-                <option value="Crunches">Crunches</option>
-                <option value="Crunches">Crunches</option>
-                <option value="Crunches">Crunches</option>
-                <option value="Crunches">Crunches</option>
+                <option value="Chest Press">Chest Press</option>
+                <option value="Cycling">Cycling</option>
+                <option value="TreadMill">Treadmill</option>
+                <!-- <option value="Crunches">Crunches</option> -->
                 <!-- <option value="pushUps">Push-Ups</option> -->
               </select>
               <input formControlName="sets" placeholder="Sets" />
