alphabetical + made summary vars static

--- a/src/app/pages/calories-calculator/calories-calculator.page.html
+++ b/src/app/pages/calories-calculator/calories-calculator.page.html
@@ -25,11 +25,11 @@
 
         <ion-card class="summary ion-text-center">
           <h2>Calories Summary</h2>
-          <h3>You require {{ totalTargetCalories }} calories per day.</h3>
+          <h3>You require {{ targetCalories() }} calories per day.</h3>
           <h3>You consume {{ totalDietCalories }} calories per day.</h3>
           <h3>Your workout burns {{ totalWorkoutCalories }} calories.</h3>
         </ion-card>
-        
+
         <calorie-target [hidden]="selectedSegment !=='target'"></calorie-target>
         <diet-calculator [hidden]="selectedSegment !=='diet'"></diet-calculator>
         <exercise-calculator
