Prevent it from showing irrellevant  fields

--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -15,10 +15,10 @@
           >
             <div class="exercise-number">Exercise {{ i + 1 }}</div>
             <div [formGroupName]="i">
-              <select formControlName="name" placeholder="name">
+              <select formControlName="name" placeholder="name" (change)="exerciseSelected($event, i)">
                 <!-- <option value="" disabled selected>Select an exercise</option> -->
                 <!-- <option *ngFor="let option of exerciseOptions" [value]="option">{{ option }}</option> -->
-                <option value="" hidden selected>Select an exercise</option>
+                <option value="" hidden selected >Select an exercise</option>
                 <option value="Barbell Curls">Barbell Curls</option>
                 <option value="Barbell Rows">Barbell Rows</option>
                 <option value="Bench Presses">Bench Presses</option>
@@ -46,9 +46,9 @@
                 <!-- <option value="Crunches">Crunches</option> -->
                 <!-- <option value="pushUps">Push-Ups</option> -->
               </select>
-              <input formControlName="sets" placeholder="Sets" />
-              <input formControlName="reps" placeholder="Repetitions" />
-              <input formControlName="weight" placeholder="Weight (kg)" />
+              <input formControlName="sets" placeholder="Sets" *ngIf="hasSets(i)"/>
+              <input formControlName="reps" placeholder="Repetitions" *ngIf="hasReps(i)"/>
+              <input formControlName="weight" placeholder="Weight (kg)" *ngIf="hasWeight(i)"/>
               <input formControlName="duration" placeholder="Duration (min)" />
               <!-- [(ngModel)]="name" [(ngModel)]="sets" [(ngModel)]="reps" [(ngModel)]="weight" -->
             </div>
