--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -74,6 +74,6 @@
     >
       Calculate Calories Burned
     </ion-button>
-    <pre><h3>{{ message }}</h3></pre>
+    <pre class="message"><h3>{{ message }}</h3></pre>
   </ion-card-content>
 </ion-card>
