--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -2,7 +2,7 @@
   <ion-header>
     <ion-toolbar>
       <backbutton class="larger-back-button"></backbutton>
-      <ion-title class="ion-text-center">Workout Tracking</ion-title>
+      <ion-title class="ion-text-center">Workout Planning</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -20,10 +20,34 @@
         <div formArrayName="exercises" *ngFor="let exercise of exercises.controls; index as i">
           <div class="exercise-number">Exercise {{ i + 1 }}</div>
           <div [formGroupName]="i">
-            <input formControlName="name" placeholder="Name" />
-            <input formControlName="sets" placeholder="Sets" />
-            <input formControlName="reps" placeholder="Repetitions" />
-            <input formControlName="weight" placeholder="Weight (kg)" />
+            <select formControlName="name" placeholder="name" (change)="exerciseSelected($event, i)">
+              <option value="" hidden selected >Select an exercise</option>
+              <option value="Barbell Curls">Barbell Curls</option>
+              <option value="Barbell Rows">Barbell Rows</option>
+              <option value="Bench Presses">Bench Presses</option>
+              <option value="Bicep Curls">Bicep Curls</option>
+              <option value="Burpees">Burpees</option>
+              <option value="Calf Raises">Calf Raises</option>
+              <option value="Chest Press">Chest Press</option>
+              <option value="Crunches">Crunches</option>
+              <option value="Deadlifts">Deadlifts</option>
+              <option value="Dumbbell Rows">Dumbbell Rows</option>
+              <option value="Jumping Jacks">Jumping Jacks</option>
+              <option value="Leg Curls">Leg Curls</option>
+              <option value="Leg Presses">Leg Presses</option>
+              <option value="Lunges">Lunges</option>
+              <option value="Planks">Planks</option>
+              <option value="Pull-Ups">Pull-Ups</option>
+              <option value="Push-Ups">Push-Ups</option>
+              <option value="Seated Cable Rows">Seated Cable Rows</option>
+              <option value="Sit-Ups">Sit-Ups</option>
+              <option value="Squats">Squats</option>
+              <option value="Stretches">Stretches</option>
+              <option value="Tricep Curls">Tricep Curls</option>
+            </select>
+            <input formControlName="sets" placeholder="Sets" *ngIf="hasSets(i)"/>
+            <input formControlName="reps" placeholder="Repetitions" *ngIf="hasReps(i)"/>
+            <input formControlName="weight" placeholder="Weight (kg)" *ngIf="hasWeight(i)"/>
             <input formControlName="duration" placeholder="Duration (min)" />
           </div>
           <ion-button color="danger" type="button" (click)="deleteExercise(i)">
