healthform data fetching by UserId

--- a/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
+++ b/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
@@ -15,7 +15,7 @@
       <ion-list>
         <ion-item>
           <ion-label>Calculation</ion-label>
-          <ion-label>Calories/X</ion-label>
+          <ion-label>Calories</ion-label>
         </ion-item>
       </ion-list>
 
@@ -26,15 +26,15 @@
         </ion-item>
         <ion-item>
           <ion-label>BMR Value</ion-label>
-          <ion-label>{{bmr | number: '1.2-2'}} day</ion-label>
+          <ion-label>{{bmr | number: '1.2-2'}} per day</ion-label>
         </ion-item>
         <ion-item>
           <ion-label>TDEE Value</ion-label>
-          <ion-label>{{TDEEValue | number: '1.2-2'}} day</ion-label>
+          <ion-label>{{TDEEValue | number: '1.2-2'}} per day</ion-label>
         </ion-item>
         <ion-item>
           <ion-label>Target Calories</ion-label>
-          <ion-label>{{targetCalories | number: '1.2-2'}} 7-days</ion-label>
+          <ion-label>{{targetCalories | number: '1.2-2'}} per week</ion-label>
         </ion-item>
       </ion-list>
 
