--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -155,7 +155,7 @@
               </ion-col>
             </ion-row>
             <ion-row>
-              <!-- <ion-col size="6">
+             <ion-col size="6">
                 <ion-card class="discover-card" routerLink="/exercise-explorer">
                  <ion-card-content>
                   <ion-card-title>
@@ -174,7 +174,7 @@
                             Calories
                         </ion-card-content>
                     </ion-card>
-                </ion-col> -->
+                </ion-col>
             </ion-row>
           </ion-grid>
         </ion-card>
